Update git references to point to gitlab.com

--- a/~ahmedtd/classes/csce647/pr01/index.html
+++ b/~ahmedtd/classes/csce647/pr01/index.html
@@ -20,7 +20,7 @@
 
   <p> The code is available as
     an <a href="./ballistae-pr01.tar.gz">archive</a> or as an
-    <a href="git://row-major.net/personal/ahmedtd/ballistae">anonymous
+    <a href="https://gitlab.com/ahmedtd/ballistae">anonymous
       git checkout</a> (tag csce647-pr01).</p>
 
   <figure>
