--- a/~ahmedtd/classes/csce647/pr13/index.html
+++ b/~ahmedtd/classes/csce647/pr13/index.html
@@ -17,10 +17,10 @@
     <section>
       Code is available as a git checkout:
 
-      <pre><code>git://row-major.net/personal/ahmedtd/ballistae</code></pre>
+      <pre><code>https://gitlab.com/ahmedtd/ballistae</code></pre>
 
       <p>Note: Images from project 5-13 all show color bleeding and
-      environmental illumination.  This is because I use very deep
+      environmental illumination.  This is because I use a very deep
       Monte-Carlo raytracer that accurately gathers spectral power
       information from throughout the scene.  So, for example, the
       caustics formed by reflective and refractive objects are
