--- a/~ahmedtd/classes/csce647/pr07/index.html
+++ b/~ahmedtd/classes/csce647/pr07/index.html
@@ -17,7 +17,7 @@
     <section>
       Code is available as a git checkout:
 
-      <pre><code>git://row-major.net/personal/ahmedtd/ballistae</code></pre>
+      <pre><code>https://gitlab.com/ahmedtd/ballistae</code></pre>
     </section>
 
     <section>
