--- a/~ahmedtd/classes/csce647/pr08/index.html
+++ b/~ahmedtd/classes/csce647/pr08/index.html
@@ -17,7 +17,7 @@
     <section>
       Code is available as a git checkout (tag <code>csce647-pr10</code>):
 
-      <pre><code>git://row-major.net/personal/ahmedtd/ballistae</code></pre>
+      <pre><code>https://gitlab.com/ahmedtd/ballistae</code></pre>
 
       <p>Meshes are loaded from an obj file.  Ray intersections are accelerated
       using a kd-tree built using a locally-greedy surface area heuristic.  For
